--- a/templates/base.html
+++ b/templates/base.html
@@ -43,9 +43,12 @@
             {% if g.user.following %}
             <ul class="navbar-nav mb-2 mr-5">
               <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Following
+                </a>
                 <ul class="dropdown-menu dropdown-menu-end" style="height: 300px; overflow-y: scroll;">
-                  {% for following in g.user.following %}
-                    <li><a class="dropdown-item" href="/character/id/{{ following.id }}">{{ following.name }}</a></li>
+                  {% for follow in g.user.following %}
+                    <li><a class="dropdown-item" href="/character/id/{{ follow.char_being_followed_id }}">{{ follow.char_being_followed_name }} - {{ follow.char_being_followed_server }}</a></li>
                   {% endfor %}
                 </ul>
               </li>
@@ -74,7 +77,7 @@
                         <ul class="dropdown-menu dropdown-menu-end">
                           {% if g.user.character %}
                             {% for character in g.user.character %}
-                            <li><a class="dropdown-item" href="/character/id/{{ character.character_id }}">{{ character.name }}</a></li>
+                            <li><a class="dropdown-item" href="/character/id/{{ character.character_id }}">{{ character.name }} - {{ character.server }}</a></li>
                             {% endfor %}
                           {% endif %}
                         <li><a class="dropdown-item" href="/user/id/{{ g.user.id }}/edit">Edit User</a></li>
